...
                android:id="@+id/iv_person"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/unit"
                android:src="@drawable/contact_avatar"
                app:layout_constraintBottom_toBottomOf="@+id/tv_persons_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_persons_number" />

            <TextView
                android:id="@+id/tv_persons_number"
                android:layout_width="0dp"
...
